--- a/qsiIntegration/build.gradle
+++ b/qsiIntegration/build.gradle
@@ -28,6 +28,10 @@ dependencies {
 	
 	// https://mvnrepository.com/artifact/commons-net/commons-net
 	compile group: 'commons-net', name: 'commons-net', version: '3.3'
+	
+	// https://mvnrepository.com/artifact/org.apache.commons/commons-io
+	compile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
+	
 }
 
 task fatJar(type: Jar) {
